objects/Order.object
<CustomObject>
    <fields>
        <fullName>AddressHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnnulmentParentOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fiield to lookup Original Order with Annulment Order. Take a look if we can use Reduction Orders from Salesforce and if so, remove this field later.</description>
        <label>AnnulmentParentOrderId</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalUserMail__c</fullName>
        <description>Email field for the approval user of the Order. Used on ADV process. This field takes the value of the email of the manager for the current user Work Team.</description>
        <label>ApprovalUserMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BillSimulationDate__c</fullName>
        <description>Bill Simulation Date</description>
        <inlineHelpText>Bill Simulation Date</inlineHelpText>
        <label>Bill Simulation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BillSimulationPayload__c</fullName>
        <description>Bill Simulation Payload</description>
        <inlineHelpText>Bill Simulation Payload</inlineHelpText>
        <label>Bill Simulation Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BillingMode__c</fullName>
        <label>BillingMode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillingMode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Cycles__c</fullName>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Cycles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargesInvoicePayload__c</fullName>
        <description>Se guarda la respuesta del 479 ya que se tiene que enviar al S485</description>
        <label>Charges Invoice Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conciliador_Time_Based_Workflow__c</fullName>
        <description>Campo utilizado en Tech Care, el cual es utilizado para lanzar una accion basada en tiempo desde el Workflow Rule llamada TechCare-OrderConcilitionOM_NotResponse</description>
        <formula>CreatedDate - 0.03455</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conciliador Time Based Workflow</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Sent_S029__c</fullName>
        <description>Fecha y hora llamada al servicio S029 (Facturacion y Cobro) de HUAWEI.</description>
        <label>DateTime_Sent_S029</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeliveryDate__c</fullName>
        <description>Delivery Date - xOM</description>
        <inlineHelpText>Delivery Date - xOM</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Method_Service__c</fullName>
        <label>Delivery Method Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delivery_Method_Service</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_cmt__OriginatingChannel__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Delivery_Methods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Tracking_ID__c</fullName>
        <description>Track &amp; trace</description>
        <label>Delivery Tracking ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Transaction_ID__c</fullName>
        <description>MEC Correlation ID</description>
        <label>Delivery Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveOneTimeTotal_w_Tax__c</fullName>
        <label>Effective Total: One Time Charges w Tax</label>
        <summarizedField>OrderItem.EffectiveOneTimeTotal_w_Tax__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EffectiveRecurringTotal_w_Tax__c</fullName>
        <label>Effective Total: Monthly Charges w Tax</label>
        <summarizedField>OrderItem.EffectiveRecurringTotal_w_Tax__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Effective_Order_Total_w_Tax__c</fullName>
        <formula>EffectiveOneTimeTotal_w_Tax__c +( EffectiveRecurringTotal_w_Tax__c * vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Order Total w Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimate_Acceptance__c</fullName>
        <label>Aceptacion del Presupuesto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                </value>
                <value>
                    <fullName>Aceptado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gestion__c</fullName>
        <label>Gestion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cambio de SIM</fullName>
                </value>
                <value>
                    <fullName>Cambio de SIM por siniestro</fullName>
                </value>
                <value>
                    <fullName>Cambio de número</fullName>
                </value>
                <value>
                    <fullName>Cambio de titularidad</fullName>
                </value>
                <value>
                    <fullName>Desconexión</fullName>
                </value>
                <value>
                    <fullName>Nominacion</fullName>
                </value>
                <value>
                    <fullName>Cambio de Plan</fullName>
                </value>
                <value>
                    <fullName>Alta Baja Servicios</fullName>
                </value>
                <value>
                    <fullName>Compra de Pack</fullName>
                </value>
                <value>
                    <fullName>Venta</fullName>
                </value>
                <value>
                    <fullName>Alta</fullName>
                </value>
                <value>
                    <fullName>Recarga</fullName>
                </value>
                <value>
                    <fullName>Preactivacion Repro</fullName>
                </value>
                <value>
                    <fullName>Alta o Baja SVA</fullName>
                </value>
                <value>
                    <fullName>Conciliador</fullName>
                </value>
                <value>
                    <fullName>Conciliate</fullName>
                </value>
                <value>
                    <fullName>Suspension</fullName>
                </value>
                <value>
                    <fullName>Resume</fullName>
                </value>
                <value>
                    <fullName>Numero Gratis</fullName>
                </value>
                <value>
                    <fullName>Alta producto genérico</fullName>
                </value>
                <value>
                    <fullName>Cambio de Terminal</fullName>
                </value>
                <value>
                    <fullName>Cambio en Garantia</fullName>
                </value>
                <value>
                    <fullName>Reseteo de Cuota</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstalationAddress__c</fullName>
        <description>Details of the installation address</description>
        <label>InstalationAddress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LegalInvoiceNumber__c</fullName>
        <description>Legal Invoice Number</description>
        <label>Legal Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneTimeTotal_w_Tax__c</fullName>
        <label>Total: One Time Charges w Tax</label>
        <summarizedField>OrderItem.OneTimeTotal_w_Tax__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Operador_Logistico__c</fullName>
        <description>Mail</description>
        <label>Operador Logistico</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Code__c</fullName>
        <description>Field used to describe the operation being performed. Used to retake the order in any step.</description>
        <label>Operation Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrchestrationPlanURL__c</fullName>
        <formula>IF(ISBLANK(vlocity_cmt__OrchestrationPlanReferenceId__c), &quot;&quot;, HYPERLINK(&quot;/apex/vlocity_cmt__XOMLoki#!/object/&quot; &amp; vlocity_cmt__OrchestrationPlanReferenceId__c, &quot;Orchestration Plan&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orchestration Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApprovalStatus__c</fullName>
        <description>Order Status when approval needed from Administración de Ventas profile.</description>
        <label>OrderApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente de aprobación</fullName>
                </value>
                <value>
                    <fullName>Aprobado por ADV</fullName>
                </value>
                <value>
                    <fullName>Rechazada por ADV</fullName>
                </value>
                <value>
                    <fullName>Aprobada automáticamente</fullName>
                </value>
                <value>
                    <fullName>Devuelto al Vendedor</fullName>
                </value>
                <value>
                    <fullName>Rechazado por Cliente</fullName>
                </value>
                <value>
                    <fullName>Aprobado por Cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OriginStoreLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Origin Store Location</label>
        <referenceTo>vlocity_cmt__BusinessSite__c</referenceTo>
        <relationshipLabel>Orders (Origin Store Location)</relationshipLabel>
        <relationshipName>OriginOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OutboundSMSLastTryDate__c</fullName>
        <description>Outbound SMS Last Try Date</description>
        <inlineHelpText>Outbound SMS Last Try Date</inlineHelpText>
        <label>Outbound SMS Last Try Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutboundSMSLastTryNumber__c</fullName>
        <description>Outbound SMS Last Try Number</description>
        <inlineHelpText>Outbound SMS Last Try Number</inlineHelpText>
        <label>Outbound SMS Last Try Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutboundSMS__c</fullName>
        <label>OutboundSMS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentBank__c</fullName>
        <description>Payment Bank</description>
        <inlineHelpText>Payment Bank</inlineHelpText>
        <label>Payment Bank</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentCFT__c</fullName>
        <description>#SalesTeam #Sprint12 

Description:  this field is used to persist the calculation of the CFT (TOTAL FINANCIAL COST) over a selected amount</description>
        <inlineHelpText>this field is used to persist the calculation of the CFT (TOTAL FINANCIAL COST) over a selected amount</inlineHelpText>
        <label>Payment CFT</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentCreditCard__c</fullName>
        <description>Payment Credit Card</description>
        <inlineHelpText>Payment Credit Card</inlineHelpText>
        <label>Payment Credit Card</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentInstalment__c</fullName>
        <description>Amount of installments in which the order will be paid.</description>
        <inlineHelpText>Amount of installments in which the order will be paid.</inlineHelpText>
        <label>Payment Instalment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentMethodType__c</fullName>
        <label>Payment Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PaymentMethodType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PickUpStoreLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pick Up Store Location</label>
        <referenceTo>vlocity_cmt__BusinessSite__c</referenceTo>
        <relationshipLabel>Orders (Pick Up Store Location)</relationshipLabel>
        <relationshipName>OrdersForPickUp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PickUpStore__c</fullName>
        <description>Punto de venta seleccionado para entrega por Store Pick Up</description>
        <label>PickUpStore</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreInvoiceNumber__c</fullName>
        <description>Numero de comprobante que devuelve la integracion S029</description>
        <label>Pre Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrefeasibilityResult__c</fullName>
        <description>Result JSON of the Prefeasibility service</description>
        <label>PrefeasibilityResult</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Code_Name__c</fullName>
        <description>Explanation of code returned from 224 Service (Huawei payment notification) required to check payment status of Sale Order</description>
        <label>Reason Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <description>Code returned from 224 Service (Huawei payment notification) required to check payment status of Sale Order</description>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received224_Date__c</fullName>
        <description>A date field to store the date when the response of the 224 integration service is received. The 224 service is a callback response from Payment, indicating if payment was successful or why did it fail. This is needed for later validations on the order.</description>
        <label>Received224_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecurringTotal_w_Tax__c</fullName>
        <label>Total: Monthly Charges w Tax</label>
        <summarizedField>OrderItem.RecurringTotal_w_Tax__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RejectionReason__c</fullName>
        <description>A field to populate when an order is rejected. It explains the reason of the user to reject the order or annulment order.</description>
        <label>RejectionReason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SaleMotivoRechazoADV__c</fullName>
        <description>Field created for History PFTA-9428, to select the reason for rejection of ADV users.</description>
        <label>Motivo de Rechazo ADV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ausencia de constancia de Afip</fullName>
                </value>
                <value>
                    <fullName>Ausencia o error en documentación impositiva</fullName>
                </value>
                <value>
                    <fullName>Ausencia de contrato social, estatuto, acta, poder</fullName>
                </value>
                <value>
                    <fullName>Adulteración de DNI o erróneo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingAditionalInformation__c</fullName>
        <description>Shipping Aditional Information</description>
        <inlineHelpText>Informacion Adicional de Envio</inlineHelpText>
        <label>Shipping Aditional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingApartment__c</fullName>
        <description>Shipping Apartment</description>
        <inlineHelpText>Shipping Apartment</inlineHelpText>
        <label>Shipping Apartment</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingEmailContact__c</fullName>
        <description>Shipping Email Contact</description>
        <inlineHelpText>Email de contacto de envio</inlineHelpText>
        <label>Shipping Email Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ShippingFloor__c</fullName>
        <description>Shipping Floor</description>
        <inlineHelpText>Shipping Floor</inlineHelpText>
        <label>Shipping Floor</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingHomePhone__c</fullName>
        <description>Shipping Home Phone</description>
        <inlineHelpText>Telefono fijo de envio</inlineHelpText>
        <label>Shipping Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShippingMobilePhone__c</fullName>
        <description>Shipping Mobile Phone</description>
        <inlineHelpText>Telefono celular de envio</inlineHelpText>
        <label>Shipping Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShippingPostOffice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shipping Post Office</description>
        <inlineHelpText>Shipping Post Office</inlineHelpText>
        <label>Shipping Post Office</label>
        <referenceTo>vlocity_cmt__BusinessSite__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingRangeHours__c</fullName>
        <description>Shipping Range Hours</description>
        <inlineHelpText>Franja Horaria de entrega programada</inlineHelpText>
        <label>Shipping Range Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet1__c</fullName>
        <description>Shipping Street 1</description>
        <inlineHelpText>Entre calles - calle 1</inlineHelpText>
        <label>Shipping Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet2__c</fullName>
        <description>Shipping Street 2</description>
        <inlineHelpText>Entre calles - calle 2</inlineHelpText>
        <label>Shipping Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreetNumber__c</fullName>
        <description>Shipping Street Number</description>
        <inlineHelpText>Shipping Street Number</inlineHelpText>
        <label>Shipping Street Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <description>Shipping Street</description>
        <inlineHelpText>Shipping Street</inlineHelpText>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubGestion__c</fullName>
        <description>Used to identify the subtype of Gestion performed. This field depends on Gestion__c value. Initially created to identify the subtypes of Cambio En Garantía (Replacement Warranty).</description>
        <label>SubGestion</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Gestion__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Orden de ST</fullName>
                </value>
                <value>
                    <fullName>Fallas reiteradas</fullName>
                </value>
                <value>
                    <fullName>Ley de defensa del consumidor</fullName>
                </value>
                <value>
                    <fullName>Terminal sin ST</fullName>
                </value>
                <value>
                    <fullName>Cliente Nuevo</fullName>
                </value>
                <value>
                    <fullName>Cliente Existente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrackingStatusDetail__c</fullName>
        <description>Tracking Status Detail</description>
        <inlineHelpText>Tracking Status Detail</inlineHelpText>
        <label>Tracking Status Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingStatus__c</fullName>
        <label>Tracking status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente de pago</fullName>
                </value>
                <value>
                    <fullName>Preparar pedido</fullName>
                </value>
                <value>
                    <fullName>Pendiente de entrega</fullName>
                </value>
                <value>
                    <fullName>Entregado</fullName>
                </value>
                <value>
                    <fullName>Pendiente de Validacion de Identidad</fullName>
                </value>
                <value>
                    <fullName>Cancelada - Timeout Validacion</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida por mora</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida por fraude</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida voluntariamente</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida por siniestro</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida por Dorma</fullName>
                </value>
                <value>
                    <fullName>Línea de Baja</fullName>
                </value>
                <value>
                    <fullName>Cancelada - Time Out Store PickUp</fullName>
                </value>
                <value>
                    <fullName>Cobrado</fullName>
                </value>
                <value>
                    <fullName>Pago No Concretado</fullName>
                </value>
                <value>
                    <fullName>Recargado</fullName>
                </value>
                <value>
                    <fullName>Recarga SOS exitosa</fullName>
                </value>
                <value>
                    <fullName>Pendiente de Anulacion</fullName>
                </value>
                <value>
                    <fullName>Fraude</fullName>
                </value>
                <value>
                    <fullName>Cancelada - Validacion Rechazada</fullName>
                </value>
                <value>
                    <fullName>Cancelada - Timeout Caja</fullName>
                </value>
                <value>
                    <fullName>Anulado</fullName>
                </value>
                <value>
                    <fullName>Exitoso</fullName>
                </value>
                <value>
                    <fullName>Cancelada - Timeout</fullName>
                </value>
                <value>
                    <fullName>Inicial</fullName>
                </value>
                <value>
                    <fullName>Cerrada - No corresponde</fullName>
                </value>
                <value>
                    <fullName>Cerrada Exitosa - Reclamo</fullName>
                </value>
                <value>
                    <fullName>Pendiente de Anulación de Pago por Vencimiento de Plazo de Retiro</fullName>
                </value>
                <value>
                    <fullName>Pendiente de Anulación de Pago</fullName>
                </value>
                <value>
                    <fullName>Pago Fallido</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <description>Formula: Value of the AccountId field.</description>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountRecordType__c</fullName>
        <formula>Account.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountSLA__c</fullName>
        <formula>TEXT(Account.vlocity_cmt__vSLA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingName__c</fullName>
        <description>Text to enter billing contact</description>
        <label>Billing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CreatedByAPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultCurrencyPaymentMode__c</fullName>
        <label>Default Currency Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                    <default>true</default>
                    <label>Currency</label>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Delivery_Installation_Status__c</fullName>
        <label>Delivery Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Discount__c</fullName>
        <description>Manual discount for entire order</description>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DueDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeLoyaltyTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: One Time Loyalty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective Total: One Time Charges</label>
        <summarizedField>OrderItem.vlocity_cmt__EffectiveOneTimeTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOrderTotal__c</fullName>
        <formula>vlocity_cmt__EffectiveOneTimeTotal__c +  vlocity_cmt__Tax__c  +( vlocity_cmt__EffectiveRecurringTotal__c *  vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Total: Monthly Charges</label>
        <summarizedField>OrderItem.vlocity_cmt__EffectiveRecurringTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this order</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentStatus__c</fullName>
        <description>The summary fulfilment status of this order. Populated and updated by order management processes for submitted orders.</description>
        <inlineHelpText>Fulfilment Status</inlineHelpText>
        <label>Fulfilment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if order requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsSyncing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syncing</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>